# Accelerated-Pipeline

./: .gitignore  LICENSE  README.md  config  configure.ac
sample-inputs/: map-100.gexf
src/: Makefile  Makefile.am  break-edges.c  break-edges.cu  break-edges.h  comparescript  connected-component.c  connected-component.cu  connected-component.h  cuda-stream.cu  cuda-stream.h  cuda-timer.cu  cuda-timer.h  fa2-cuda.cu  fa2-cuda.h  force-atlas-2.c  force-atlas-2.cu  force-atlas-2.h  forces.c  forces.h  gexfparser.c  gexfparser.h  graph.c  graph.h  graphparser.c  graphparser.h  lanes.gexf  main.c  par-reference  par-reference-only-timestep-0  parref  pca.c  pca.cpp  pca.cu  pca.h  pipeline.c  pipeline.h  printdiff.py  run  run-with-output  (+35 more)
src/alglib/: alglib-3.8.2.cpp.tgz
src/test-difference/: makeplot  test.py
times/: README  getAverageRuntime
times/block-1024/par-gtx680/: map-100-100  map-1000-100  map-10000-100  map-500-100  map-5000-100
times/block-128/par-gtx680/: map-100-100  map-1000-100  map-10000-100  map-500-100  map-5000-100
times/block-256/par-gtx680/: map-100-100  map-1000-100  map-10000-100  map-500-100  map-5000-100
times/block-512/par-gtx680/: map-100-100  map-1000-100  map-10000-100  map-500-100  map-5000-100
times/par-k20/: map-100-100  map-1000-100  map-10000-100  map-500-100  map-5000-100
times/seq-gtx680/: map-100-10  map-1000-10  map-500-10  map-5000-10
times/seq-k20/: map-100-100  map-1000-100  map-10000-100  map-500-100  map-5000-100
times/test-gtx480/: map-100-100  map-1000-100  map-10000-100  map-500-100  map-5000-100
(+35 files in other folders)
