#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([SpringEmbedr], [0.1], [j.j.r.donkervliet@student.tudelft.nl])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_OUTPUT([Makefile src/Makefile])
AC_PROG_CC

# Checks for programs.

# Checks for libraries.
AM_PATH_XML2([2.4.0])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
